# AuraOS-

./: .editorconfig  .gitignore  ANDROID_CONFIG_FIX.md  BUILD-AUTOMATION.md  BUILD_FIXES_SUMMARY.md  CORRECT ENCHANCE FULLY AUTO GRADLE BUILD.md  MERGE_COMPLETE_SUMMARY.md  META_EXPLANATION.md  MODULE_STRUCTURE.md  README.md  build-automation.ps1  build-test.bat  build.gradle.kts  buildlog.txt  gradle.properties  gradlew  merge.md  openapi-generator-config.json  openapi.yml  sample.build.gradle.kts  settings.gradle.kts  stability_config.conf
.github/: dependabot.yml
.github/workflows/: build.yml  ci-build.yml  ci.yml  dependabot-auto-merge.yml  genesis_setup.yml  main.yml  manual.yml
_CLEANUP_BACKUP/: CLEANUP_SUMMARY.md
app/: build-fixed.gradle.kts  build.gradle.kts  google-services.json
app/ai_backend/: genesis_connector.py
app/src/cpp/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  auraframefx.cpp
app/src/main/cpp/ai/cascade/src/: CascadeAIService.cpp
app/src/main/res/layout/: activity_quick_settings_config.xml  dialog_tile_config.xml  item_tile_config.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: .gitkeep  colors.xml  themes.xml
app/src/test/kotlin/: BuildScriptsValidationTest.kt
app/src/test/kotlin/settings/: SettingsConfigurationTest.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: android-application-conventions.gradle.kts  android-library-conventions.gradle.kts
collab-canvas/: build.gradle.kts
collab-canvas/src/main/cpp/: collab_canvas_native.cpp
colorblendr/: build.gradle.kts
config/detekt/: detekt.yml
core-module/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
datavein-oracle-native/: build.gradle.kts
datavein-oracle-native/src/main/cpp/: oracle_drive_jni.cpp
feature-module/: build.gradle.kts
gradle/: gradle.properties  libs.versions.toml  libs.versions.toml.backup
gradle/wrapper/: gradle-wrapper.properties
jvm-test/: build.gradle.kts
jvm-test/src/test/kotlin/: BuildScriptsIntegrationTest.kt
module-a/: build.gradle.kts
module-b/: build.gradle.kts
module-c/: build.gradle.kts
module-d/: build.gradle.kts
module-e/: build.gradle.kts
module-f/: build.gradle.kts
openapi/specs/: api-spec.yaml  auraframefx_ai_api.yaml  genesis-api.yml  romtools-api.yml
oracle-drive-integration/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
oracle-drive-integration/src/main/: AndroidManifest.xml
oracledrive/: build.gradle.kts
romtools/: build.gradle.kts
romtools/.cxx.backup/Release/2j2v4d26/: hash_key.txt
romtools/.cxx.backup/Release/2j2v4d26/arm64-v8a/: .ninja_log  CMakeCache.txt  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  cmake_install.cmake  compile_commands.json  metadata_generation_command.txt  symbol_folder_index.txt
romtools/.cxx.backup/Release/2j2v4d26/armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  cmake_install.cmake  compile_commands.json  metadata_generation_command.txt  symbol_folder_index.txt
romtools/.cxx.backup/Release/2j2v4d26/x86_64/: .ninja_deps  .ninja_log  (+8 more)
romtools/src/main/cpp/: romtools_native.cpp
sandbox-ui/: build.gradle.kts
sandbox-ui/src/test/kotlin/: BuildScriptValidationTest.kt
secure-comm/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
src/test/kotlin/: GradlePropertiesValidationTest.kt  build.gradle.kts
src/test/kotlin/validation/: BuildScriptsValidationTest.kt
(+142 files in other folders)
